Porting code to Java 17 and addition of Relative Humidity channel
Signed-off-by: clinique <gael@lhopital.org>