@@ -15,7 +15,6 @@ package org.openhab.binding.airquality.internal.discovery;
 import static org.openhab.binding.airquality.internal.AirQualityBindingConstants.*;
 import static org.openhab.binding.airquality.internal.config.AirQualityConfiguration.LOCATION;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -43,7 +42,7 @@ import org.slf4j.LoggerFactory;
 @NonNullByDefault
 public class AirQualityDiscoveryService extends AbstractDiscoveryService implements ThingHandlerService {
     private static final int DISCOVER_TIMEOUT_SECONDS = 2;
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_STATION);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_STATION);
 
     private final Logger logger = LoggerFactory.getLogger(AirQualityDiscoveryService.class);
 
@@ -59,8 +58,7 @@ public class AirQualityDiscoveryService extends AbstractDiscoveryService impleme
 
     @Override
     public void setThingHandler(@Nullable ThingHandler handler) {
-        if (handler instanceof AirQualityBridgeHandler) {
-            final AirQualityBridgeHandler bridgeHandler = (AirQualityBridgeHandler) handler;
+        if (handler instanceof AirQualityBridgeHandler bridgeHandler) {
             this.bridgeHandler = bridgeHandler;
             this.locationProvider = bridgeHandler.getLocationProvider();
         }
@@ -94,7 +92,7 @@ public class AirQualityDiscoveryService extends AbstractDiscoveryService impleme
     private void createResults(PointType location, ThingUID bridgeUID) {
         ThingUID localAirQualityThing = new ThingUID(THING_TYPE_STATION, bridgeUID, LOCAL);
         thingDiscovered(DiscoveryResultBuilder.create(localAirQualityThing).withLabel("Local Air Quality")
-                .withProperty(LOCATION, String.format("%s,%s", location.getLatitude(), location.getLongitude()))
+                .withProperty(LOCATION, "%s,%s".formatted(location.getLatitude(), location.getLongitude()))
                 .withBridge(bridgeUID).build());
     }
 }
